--- a/src/main/resources/front/views/index.html
+++ b/src/main/resources/front/views/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../styles/index.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>NTS Design technical task</title>
 </head>
 <body>
-
+<nav>
+    <input type="checkbox" id="check">
+    <label for="check" class="check-btn">
+        <i class="fas fa-bars"></i>
+    </label>
+    <label class="logo">NTS Design Technical task</label>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Web Connect</a></li>
+    </ul>
+</nav>
 </body>
 </html>
