--- a/src/main/resources/front/views/login.html
+++ b/src/main/resources/front/views/login.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>Register or Log-in</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300, 400, 500" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="../styles/registration.css">
-
+    <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
 
