--- a/src/main/resources/front/views/index.html
+++ b/src/main/resources/front/views/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../styles/index.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="icon" href="../public/logo.webp">
     <title>NTS Design technical task</title>
 </head>
 <body>
@@ -18,8 +18,78 @@
     <label class="logo">NTS Design Technical task</label>
     <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Web Connect</a></li>
+        <li><a href="#" id="ws_connect">WS Connect</a></li>
+        <li><a href="#" id="simple_file_upload">Simple File Upload</a></li>
     </ul>
 </nav>
+<main>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <form>
+                <span class="close">&times;</span>
+                <h2>Upload File</h2>
+                <input type="file" id="fileInput">
+                <button id="uploadButton">Upload</button>
+            </form>
+        </div>
+    </div>
+</main>
+
+<script>
+    // start of user part
+    const user = JSON.parse(localStorage.getItem('user'))
+    // end of user part
+
+
+    // start of modal part
+    const openModalButton = document.getElementById('simple_file_upload');
+    const modal = document.getElementById('myModal'); // Define 'modal' here
+    const closeButton = document.querySelector('.close');
+
+    openModalButton.addEventListener('click', () => {
+        modal.style.display = 'block';
+    });
+
+    closeButton.addEventListener('click', () => {
+        modal.style.display = 'none';
+    });
+
+    window.addEventListener('click', (event) => {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        }
+    );
+    // end of modal part
+
+
+    // start of file upload part
+    const fileInput = document.getElementById('fileInput');
+    const uploadButton = document.getElementById('uploadButton');
+
+    uploadButton.addEventListener('click', () => {
+        const selectedFile = fileInput.files[0]; // Get the selected file
+
+        if (selectedFile) {
+            const formData = new FormData();
+            formData.append('file', selectedFile)
+            formData.append('user_id', user.id)
+
+            fetch('http://localhost:8888/api/v1/file/simple-upload', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data)
+                })
+                .catch(error => {
+                    alert(error)
+                });
+        }
+    });
+
+    // end of file upload part
+</script>
 </body>
 </html>
