--- a/src/main/resources/front/views/index.html
+++ b/src/main/resources/front/views/index.html
@@ -74,6 +74,7 @@
             const formData = new FormData();
             formData.append('file', selectedFile)
             formData.append('user_id', user.id)
+            formData.append('file_name', getCurrentDateTime())
 
             fetch('http://localhost:8888/api/v1/file/simple-upload', {
                 method: 'POST',
@@ -90,6 +91,26 @@
     });
 
     // end of file upload part
+
+
+    // start of file convert part
+
+    const getCurrentDateTime = () => {
+        const now = new Date();
+
+        const day = String(now.getDate()).padStart(2, '0');
+        const month = String(now.getMonth() + 1).padStart(2, '0');
+        const year = now.getFullYear();
+
+        const hours = String(now.getHours()).padStart(2, '0');
+        const minutes = String(now.getMinutes()).padStart(2, '0');
+        const seconds = String(now.getSeconds()).padStart(2, '0');
+
+        return `${day}${month}${year}_${hours}${minutes}${seconds}`;
+    }
+
+    // end of file convert part
+
 </script>
 </body>
 </html>
