--- a/src/main/resources/front/views/index.html
+++ b/src/main/resources/front/views/index.html
@@ -42,12 +42,16 @@
 <script>
     // start of user part
     const user = JSON.parse(localStorage.getItem('user'))
+
+    if (!user){
+        window.location.href = './login.html'
+    }
     // end of user part
 
 
     // start of modal part
     const openModalButton = document.getElementById('simple_file_upload');
-    const modal = document.getElementById('myModal'); // Define 'modal' here
+    const modal = document.getElementById('myModal');
     const closeButton = document.querySelector('.close');
 
     openModalButton.addEventListener('click', () => {
