--- a/src/main/resources/front/views/index.html
+++ b/src/main/resources/front/views/index.html
@@ -9,8 +9,15 @@
     <link rel="icon" href="../public/logo.webp">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>NTS Design technical task</title>
 </head>
+<style>
+    .container {
+        display: flex;
+    }
+</style>
 <body>
 <nav>
     <input type="checkbox" id="check">
@@ -35,51 +42,95 @@
             </form>
         </div>
     </div>
+
+    <div class="container">
+        <div style="width: 50%;padding: 20px">
+            <h1 style="margin-left: 25%"> Uploaded files info</h1>
+            <table class="table table-striped" id="fileTable">
+                <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">FileDate</th>
+                    <th scope="col">FileName</th>
+                    <th scope="col">FilePath</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div style="width: 50%;padding: 20px">
+            <h1 style="margin-left: 45%">Logs</h1>
+            <form>
+                <input id="ws_log" placeholder="Add log with web socket" type="text" required>
+                <button type="submit" id="sendLogWithWS">Send</button>
+            </form>
+            <table class="table" id="logTable">
+                <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Content</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
 </main>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script>
     // start of user part
     const user = JSON.parse(localStorage.getItem('user'))
 
-    if (!user){
+    if (!user) {
         window.location.href = './login.html'
     }
     // end of user part
 
 
     // start of modal part
-    const openModalButton = document.getElementById('simple_file_upload');
-    const modal = document.getElementById('myModal');
-    const closeButton = document.querySelector('.close');
+    const openModalButton = document.getElementById('simple_file_upload')
+    const modal = document.getElementById('myModal')
+    const closeButton = document.querySelector('.close')
 
     openModalButton.addEventListener('click', () => {
-        modal.style.display = 'block';
-    });
+        modal.style.display = 'block'
+    })
 
     closeButton.addEventListener('click', () => {
-        modal.style.display = 'none';
-    });
+        modal.style.display = 'none'
+    })
 
     window.addEventListener('click', (event) => {
             if (event.target === modal) {
-                modal.style.display = 'none';
+                modal.style.display = 'none'
             }
         }
-    );
+    )
     // end of modal part
 
 
     // start of file upload part
-    const fileInput = document.getElementById('fileInput');
-    const uploadButton = document.getElementById('uploadButton');
+    const fileInput = document.getElementById('fileInput')
+    const uploadButton = document.getElementById('uploadButton')
 
     uploadButton.addEventListener('click', () => {
-        const selectedFile = fileInput.files[0]; // Get the selected file
+        const selectedFile = fileInput.files[0] // Get the selected file
 
         if (selectedFile) {
-            const formData = new FormData();
+            const formData = new FormData()
             formData.append('file', selectedFile)
             formData.append('user_id', user.id)
             formData.append('file_name', getCurrentDateTime())
@@ -93,10 +144,11 @@
                     console.log(data)
                 })
                 .catch(error => {
-                    alert(error)
-                });
+                        alert(error)
+                    }
+                )
         }
-    });
+    })
 
     // end of file upload part
 
@@ -104,65 +156,124 @@
     // start of file convert part
 
     const getCurrentDateTime = () => {
-        const now = new Date();
+        const now = new Date()
 
-        const day = String(now.getDate()).padStart(2, '0');
-        const month = String(now.getMonth() + 1).padStart(2, '0');
-        const year = now.getFullYear();
+        const day = String(now.getDate()).padStart(2, '0')
+        const month = String(now.getMonth() + 1).padStart(2, '0')
+        const year = now.getFullYear()
 
-        const hours = String(now.getHours()).padStart(2, '0');
-        const minutes = String(now.getMinutes()).padStart(2, '0');
-        const seconds = String(now.getSeconds()).padStart(2, '0');
+        const hours = String(now.getHours()).padStart(2, '0')
+        const minutes = String(now.getMinutes()).padStart(2, '0')
+        const seconds = String(now.getSeconds()).padStart(2, '0')
 
-        return `${day}${month}${year}_${hours}${minutes}${seconds}`;
+        return `${day}${month}${year}_${hours}${minutes}${seconds}`
     }
 
     // end of file convert part
 
     // start of websocket part
 
-    const socket = new SockJS("http://localhost:8888/api/v1/nts");
+    const socket = new SockJS("http://localhost:8888/api/v1/nts")
 
-    const stompClient = Stomp.over(socket);
+    const stompClient = Stomp.over(socket)
 
     stompClient.connect({}, (frame) => {
-        console.log('Connected: ' + frame);
-
-        stompClient.send('/fileInfo', {}, JSON.stringify(
-            {
-                fileName: '2023-08-30T00:47:34',
-                command: 'fileInfo',
-                userId: user.id
-            }
-        ));
+        console.log('Connected: ' + frame)
 
         stompClient.send('/addLog', {}, JSON.stringify(
             {
                 command: 'addLog',
                 userId: user.id,
-                content:'hello world'
+                content: 'hello world'
             }
-        ));
+        ))
 
         stompClient.send('/getLogs', {}, JSON.stringify(
             {
                 command: 'logs',
                 userId: user.id,
             }
-        ));
+        ))
 
         stompClient.subscribe('/topic/fileInfo/' + user.id, (response) => {
-            console.log('file info' , response)
-        });
-
-        stompClient.subscribe('/topic/getLogs/' + user.id, response => {
-            console.log('logs' , response)
+            console.log('file info', response)
+            insertFileTableRow(JSON.parse(response.body))
         })
 
-    });
+        stompClient.subscribe('/topic/getLogs/' + user.id, response => {
+            console.log('logs', response.body)
+            insertLogTableRow(JSON.parse(response.body))
+        })
+
+    })
+
+    const sendLog = (content) => {
+        stompClient.send('/addLog', {}, JSON.stringify(
+                {
+                    command: 'addLog',
+                    userId: user.id,
+                    content: content
+                }
+            )
+        )
+    }
+
+    const sendLogWithWS = document.getElementById('sendLogWithWS')
+
+    sendLogWithWS.addEventListener('click' , (e) => {
+        e.preventDefault()
+
+        let value = document.getElementById('ws_log').value
+
+        if (!value || value === ''){
+            return
+        }
+
+        sendLog(value)
+    })
+
 
     // end of websocket part
 
+    // start update table part
+    const insertFileTableRow = (file) => {
+        const table = document.getElementById("fileTable").getElementsByTagName('tbody')[0]
+        const newRow = table.insertRow(table.rows.length)
+        const cell1 = newRow.insertCell(0)
+        const cell2 = newRow.insertCell(1)
+        const cell3 = newRow.insertCell(2)
+        const cell4 = newRow.insertCell(3)
+
+        cell1.innerHTML = file.id
+        cell2.innerHTML = file.uploadedOn
+        cell3.innerHTML = file.fileName
+        cell4.innerHTML = file.filePath
+    }
+
+    const insertLogTableRow = (logs) => {
+        const table = document.getElementById("logTable").getElementsByTagName('tbody')[0]
+        // Clear existing rows
+        while (table.firstChild) {
+            table.removeChild(table.firstChild);
+        }
+        for (const logId in logs) {
+            if (logs.hasOwnProperty(logId)) {
+                const log = logs[logId];
+                const newRow = table.insertRow();
+                const cell1 = newRow.insertCell(0);
+                const cell2 = newRow.insertCell(1);
+
+                cell1.innerHTML = log.id;
+                cell2.innerHTML = log.content;
+            }
+        }
+    }
+
+
+    // end update table part
+
+
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </body>
 </html>
